--- a/index.html
+++ b/index.html
@@ -1401,61 +1401,128 @@
                                 <span class="pic-brands">
                                     <img src="images/logo-apple.png" height="100" alt="Apple">
                                 </span>
-                                <h2>Apple</h2>
+                                <h3>Apple</h3>
                             </a>
                         </li>
                         <li class="wow fadeInUp">
                                 <span class="pic-talent">
                                     <img src="images/logo-ipl.jpg" height="100" alt="IPL">
                                 </span>
-                                <h2>IPL</h2>
+                                <h3>IPL</h3>
                             </a>
                         </li>
                         <li class="wow fadeInUp">
                             <span class="pic-talent">
                                 <img src="images/logo-bcci.png" height="100" alt="BCCI">
                             </span>
-                            <h2>BCCI</h2>
+                            <h3>BCCI</h3>
                         </a>
                         </li>
                         <li class="wow fadeInUp">
                             <span class="pic-talent">
                                 <img src="images/logo-icc.png" height="100" alt="ICC">
                             </span>
-                            <h2>ICC</h2>
+                            <h3>ICC</h3>
                             </a>
                         </li>
                         <li class="wow fadeInUp">
                             <span class="pic-talent">
                                 <img src="images/logo-starsports.png" height="100" alt="Star Sports">
                             </span>
-                            <h2>Star Sports</h2>
+                            <h3>Star Sports</h3>
                             </a>
                         </li>
                         <li class="wow fadeInUp">
                             <span class="pic-talent">
                                 <img src="images/logo-hublot.png" height="100" alt="Hublot">
                             </span>
-                            <h2>Hublot</h2>
+                            <h3>Hublot</h3>
                             </a>
                         </li>
                         <li class="wow fadeInUp">
                             <span class="pic-talent">
                                 <img src="images/logo-oakley.jpg" height="100" alt="Oakley">
                             </span>
-                            <h2>Oakley</h2>
+                            <h3>Oakley</h3>
                             </a>
                         </li>
                         <li class="wow fadeInUp">
                             <span class="pic-talent">
                                 <img src="images/logo-audi.png" height="100" alt="Audi">
                             </span>
-                            <h2>Audi</h2>
+                            <h3>Audi</h3>
+                            </a>
+                        </li>
+
+                        <hr>
+
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-sony.png" height="100" alt="Sony Music">
+                            </span>
+                            <h3>Sony Music</h3>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-redchillies.jpg" height="100" alt="Red Chillies">
+                            </span>
+                            <h3>Red Chillies</h3>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-marriot.png" height="100" alt="Marriot">
+                            </span>
+                            <h3>Marriot</h3>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-kkr.png" height="100" alt="KKR">
+                            </span>
+                            <h3>KKR</h3>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-kxip.png" height="100" alt="KXIP">
+                            </span>
+                            <h3>KXIP</h3>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-csk.png" height="100" alt="CSK">
+                            </span>
+                            <h3>CSK</h3>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-srh.png" height="100" alt="SRH">
+                            </span>
+                            <h3>SRH</h3>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-reebok.jpg" height="100" alt="Reebok">
+                            </span>
+                            <h3>Reebok</h3>
+                            </a>
+                        </li>
+                        <li class="wow fadeInUp">
+                            <span class="pic-talent">
+                                <img src="images/logo-unicef.png" height="100" alt="Unicef">
+                            </span>
+                            <h3>Unicef</h3>
                             </a>
                         </li>
                         </ul>
 
-                        <hr>
+                       <p> <button>View More</button>
+                       </p>
 
                         
 
@@ -1464,8 +1531,7 @@
                 <a name="timeline"></a>
                 <div class="clear"></div>
                 <div class="txt_cent"><br><br>
-                    All brand names/logos used are trademarks or registered trademarks of their respective companies and are hereby acknowledged.<br>
-                    <br>
+                    All brand names/logos used are trademarks or registered trademarks of their respective companies and are hereby acknowledged.
                     <br>
                     <!-- <a href="timeline/default.htm" class="read-more1">
                         View List of Accomplishments <span class="icon-more"></span>
@@ -1489,6 +1555,16 @@
                     <div class="wrap">
                         <h2 class="mob-show">Significant Gallery </h2>
                     </div>
+
+                    <!-- <img src="images/gallery1.PNG" height="400">
+                    <img src="images/gallery2.PNG" height="400"> -->
+
+                    <img src="images/gallery3.PNG" height="500">
+                    <img src="images/gallery4.PNG" height="500">
+                    <img src="images/gallery5.PNG" height="500">
+                    <img src="images/gallery6.PNG" height="500">
+                    <img src="images/gallery7.PNG" height="500">
+                    <img src="images/gallery8.PNG" height="500">
 
                 </div>
 
