--- a/index.html
+++ b/index.html
@@ -1559,12 +1559,12 @@
                     <!-- <img src="images/gallery1.PNG" height="400">
                     <img src="images/gallery2.PNG" height="400"> -->
 
-                    <img src="images/gallery3.PNG" height="500">
-                    <img src="images/gallery4.PNG" height="500">
-                    <img src="images/gallery5.PNG" height="500">
-                    <img src="images/gallery6.PNG" height="500">
-                    <img src="images/gallery7.PNG" height="500">
-                    <img src="images/gallery8.PNG" height="500">
+                    <img src="images/gallery3.jpg" height="500">
+                    <img src="images/gallery4.jpg" height="500">
+                    <img src="images/gallery5.jpg" height="500">
+                    <img src="images/gallery6.jpg" height="500">
+                    <img src="images/gallery7.jpg" height="500">
+                    <img src="images/gallery8.jpg" height="500">
 
                 </div>
 
