--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <!-- Logo -->
                             <h1 class="logo">
                                 <a href="#home">
-                                    <img src="significantsports.png" alt="SignificantSports" title="SignificantSports"/>
+                                    <img src="images/significantsports.png" alt="SignificantSports" title="SignificantSports"/>
                                     
                                     <img src="images/significantsports-nav.png" alt="SignificantSports" title="SignificantSports"/>
                                 </a>
@@ -262,7 +262,7 @@
                         <div class="cornerstone">
                             <p class="icon"></p>
                             <p>
-                                <img src="significantsports.jpg" alt="SignificantSports"  height = "300px" title="SignificantSports"/>
+                                <img src="images/significantsports.jpg" alt="SignificantSports"  height = "300px" title="SignificantSports"/>
                             </p>
                         </div>
                         <!-- <div class="cse">
@@ -487,19 +487,19 @@
                 <div class="wrap">
                     <h2 class="mob-show">Services</h2>
                     <ul class="services_list"> 
-        <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services1">&nbsp;</span>
+        <li class="wow fadeInUp"><a href="#"><span class="icon-services1">&nbsp;</span>
         <h2>Sports Management</h2></a> </li>
         <!-- <span class="icon-more"></span> -->
-        <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services2">&nbsp;</span>
+        <li class="wow fadeInUp"><a href="#"><span class="icon-services2">&nbsp;</span>
         <h2>Talent Management</h2></a> </li>
         <!-- <span class="icon-more"></span> -->
-        <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services3">&nbsp;</span>
+        <li class="wow fadeInUp"><a href="#"><span class="icon-services3">&nbsp;</span>
         <h2>Event Management</h2></a> </li>
         <!-- <span class="icon-more"></span></a> </li> -->
-        <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services4">&nbsp;</span>
+        <li class="wow fadeInUp"><a href="#"><span class="icon-services4">&nbsp;</span>
         <h2>Sponsorship Management</h2></a> </li>
         <!-- <span class="icon-more"></span></a> </li> -->
-        <li class="wow fadeInUp"><a href="services/public-relations.htm"><span class="icon-services5">&nbsp;</span>
+        <li class="wow fadeInUp"><a href="#"><span class="icon-services5">&nbsp;</span>
         <h2>Media Buying</h2></a> </li>
         <!-- <span class="icon-more"></span></a> </li> -->
 
@@ -605,9 +605,9 @@
                         </p>
                         <div class="wow fadeInUp">
                             <!-- <img src="sportsmanagement.PNG" height="400px"> -->
-                            <img src="sportsmanagement3.jpg" height="400px">
-                            <img src="sportsmanagement4.png" height="400px">
-                            <img src="sportsmanagement2.jpg" height="400px">
+                            <img src="images/sportsmanagement3.jpg" height="400px">
+                            <img src="images/sportsmanagement4.png" height="400px">
+                            <img src="images/sportsmanagement2.jpg" height="400px">
                         </div>
                     
                        <!-- <li class="wow fadeInUp">
@@ -1311,7 +1311,7 @@
                     </ul>
 
                     <div class="wow fadeInUp">
-                    <img src="eventmanagement.jpg" height="650px">
+                    <img src="images/eventmanagement.jpg" height="650px">
                     </div>
                 </div>
             </section>
