--- a/index.html
+++ b/index.html
@@ -1556,15 +1556,19 @@
                         <h2 class="mob-show">Significant Gallery </h2>
                     </div>
 
-                    <!-- <img src="images/gallery1.PNG" height="400">
-                    <img src="images/gallery2.PNG" height="400"> -->
+                        <!-- <img src="images/gallery1.PNG" height="400">
+                        <img src="images/gallery2.PNG" height="400"> -->
 
-                    <img src="images/gallery3.jpg" height="550">
-                    <img src="images/gallery4.jpg" height="550">
-                    <img src="images/gallery5.jpg" height="550">
-                    <img src="images/gallery6.jpg" height="550">
-                    <img src="images/gallery7.jpg" height="550">
-                    <img src="images/gallery8.jpg" height="550">
+                    <div class="wow fadeInUp">
+
+                        <img src="images/gallery3.jpg" height="550">
+                        <img src="images/gallery4.jpg" height="550">
+                        <img src="images/gallery5.jpg" height="550">
+                        <img src="images/gallery6.jpg" height="550">
+                        <img src="images/gallery7.jpg" height="550">
+                        <img src="images/gallery8.jpg" height="550">
+                        
+                    </div>
 
                 </div>
 
