--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
                     <div class="site_logo wow fadeInDown">
                         <div class="cornerstone">
                             <p class="icon"></p>
-                            <p>
-                                <img src="images/significantsports.jpg" alt="SignificantSports"  height = "450px" title="SignificantSports"/>
+                            <p style="display: flex; justify-content: center;" >
+                                <img src="images/significantsports.png" alt="SignificantSports"  style="height: 25em; width: auto;" title="SignificantSports"/>
                             </p>
                         </div>
                         <!-- <div class="cse">
@@ -1327,7 +1327,7 @@
                     <br>
 
                     <div class="wow fadeInUp">
-                    <img src="images/eventmanagement.jpg" height="650px">
+                    <img src="images/eventmanagement1.jpg" height="650px">
                     </div>
                 </div>
             </section>
