talent photos updates

--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://www.instagram.com/davidwarner31/">
+                         <a href="https://www.instagram.com/davidwarner31/" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/5.PNG" height="150" alt="David Warner">
                              </span>
@@ -1012,7 +1012,7 @@
                          </a>
                      </li>
                      <li class="wow fadeInUp">
-                         <a href="https://www.instagram.com/deepdasgupta7/">
+                         <a href="https://www.instagram.com/deepdasgupta7/" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/6.PNG" height="150" alt="Deep Dasgupta">
                              </span>
@@ -1021,7 +1021,7 @@
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://twitter.com/himadas8">
+                         <a href="https://twitter.com/himadas8" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/7.PNG" height="150" alt="Hima Das">
                              </span>
@@ -1030,7 +1030,7 @@
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://www.instagram.com/singhvijender/">
+                         <a href="https://www.instagram.com/singhvijender/" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/8.PNG" height="150" alt="Vijender Singh">
                              </span>
@@ -1039,7 +1039,7 @@
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://www.instagram.com/mcmary.kom/">
+                         <a href="https://www.instagram.com/mcmary.kom/" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/9.PNG" height="150" alt="Mary Kom">
                              </span>
@@ -1048,7 +1048,7 @@
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://twitter.com/gagunnarang">
+                         <a href="https://twitter.com/gagunnarang" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/10.PNG" height="150" alt="Gagan Narang">
                              </span>
@@ -1057,25 +1057,25 @@
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://www.instagram.com/kuldeep_18/">
+                         <a href="https://www.google.com/search?q=simon+toefl" target="_blank">
                              <span class="pic-talent">
-                                 <img src="images/11.PNG" height="150" alt="Kuldeep Yadav">
+                                 <img src="images/11.PNG" height="150" alt="Simon Toefl">
                              </span>
-                             <h2>Kuldeep Yadav
+                             <h2>Simon Toefl
                           </h2>
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://www.instagram.com/deepakhooda30/">
+                         <a href="https://www.instagram.com/deepakhooda30/" target="_blank">
                              <span class="pic-talent">
-                                 <img src="images/12.PNG" height="150" alt="Deepak Hooda                            ">
+                                 <img src="images/12.PNG" height="150" alt="Deepak Hooda">
                              </span>
                              <h2>Deepak Hooda
                           </h2>
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://twitter.com/heenasidhu10">
+                         <a href="https://twitter.com/heenasidhu10" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/13.PNG" height="150" alt="Heena Sidhu">
                              </span>
@@ -1084,7 +1084,7 @@
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://www.instagram.com/brettlee_58/">
+                         <a href="https://www.instagram.com/brettlee_58/" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/14.PNG" height="150" alt="Brett Lee                            ">
                              </span>
@@ -1093,7 +1093,7 @@
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://www.instagram.com/haydos359/">
+                         <a href="https://www.instagram.com/haydos359/" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/15.PNG" height="150" alt="Matthew Hayden                                 ">
                              </span>
@@ -1102,7 +1102,7 @@
                              <!-- <span class="icon-more"></span> -->
                          </a>
                      </li><li class="wow fadeInUp">
-                         <a href="https://www.instagram.com/lsthalekar/">
+                         <a href="https://www.instagram.com/lsthalekar/" target="_blank">
                              <span class="pic-talent">
                                  <img src="images/16.PNG" height="150" alt="Lisa Sthalekar                            ">
                              </span>
