deleted enter button

--- a/index.html
+++ b/index.html
@@ -274,13 +274,14 @@
                     <div class="site_desc wow fadeInUp">
                         <!--  <p>We are always innovating to stay ahead of the curve.</p>
       <br>-->
-                        <p><strong>Event Management Company in Mumbai</strong></p>
+                        <p><strong>Sports Management Company</strong></p>
                         <br>
                         <!--<p>CSE - a sister concern of Cornerstone is a full service licensing and new-media marketing agency</p>-->
                         <div class="clear hide">&nbsp;</div>
-                        <p>
+                        <!-- <p>
                             <a href="#Services">Enter</a>
-                        </p>
+                        </p> -->
+                        <br>
                         <p>
                             <a href="#Services">
                                 <span class="icon_down">&nbsp;</span>
